BR: fix right alignment add ukrainian language to table and change style

--- a/EPlast/EPlast/wwwroot/uncompiled/sass/event_page.scss
+++ b/EPlast/EPlast/wwwroot/uncompiled/sass/event_page.scss
@@ -140,3 +140,18 @@ input.event-page-wrapper.btn-collapse:hover {
     font-size: 15px;
     width: 100px;
 }
+
+.event-page-wrapper {
+
+
+    .page-item.disabled .page-link {
+        background-color: #3c5438;
+        color: #ffffff;
+    }
+
+    .page-item.active .page-link {
+        color: #000;
+        background-color: #ffffff;
+        border-color: none;
+    }
+}
